--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aws-amplify": "^6.0.16",
     "cloudinary": "^2.0.1",
     "next": "13.5.6",
     "react": "^18",
