--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@tanstack/react-query-devtools": "^5.20.5",
     "aws-amplify": "^6.0.16",
+    "bootstrap": "^5.3.3",
     "cloudinary": "^2.0.1",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
