--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-amplify": "^6.0.16",
     "bootstrap": "^5.3.3",
     "cloudinary": "^2.0.1",
+    "framer-motion": "^11.0.22",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
