change Aws Resourses Backend

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 CLOUD_NAME = dpgpmqo6c
 CLOUD_KEY = 256394315488875
 API_SECRET=Fll8ueVOonn9Lnu9_1sQQODPV8g
+
+aws_appsync_apiKey
+AWS_APPSYNC_APIKEY = da2-rdbeaekdovgsxicm6s7c5ccxtm
