--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "aws-amplify": "^6.0.16",
     "bootstrap": "^5.3.3",
     "cloudinary": "^2.0.1",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.8",
     "framer-motion": "^11.0.22",
     "next": "13.5.6",
     "react": "^18",
