add loader in create product bottom

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
     "@tanstack/react-query-devtools": "^5.20.5",
     "aws-amplify": "^6.0.16",
     "bootstrap": "^5.3.3",
